--- a/css/_eval_section.scss
+++ b/css/_eval_section.scss
@@ -1,8 +1,14 @@
 .evaluation {
 	clear: both;
 	width: 100%;
+	box-sizing: $boxSizing;
 	background: white;
 	border-bottom: border(1px, $lightBlue);
+	@media #{$medium-screen} {
+		position: absolute;
+		top: 294px;
+		right: 0;
+	}
 	h2 {
 		color: $mediumBlue;
 		@include headerStyles;
