--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -95,7 +95,7 @@ nav {
 	top: 0;
 	left: 0;
 	width: 174px;
-	height: 1000px;
+	height: 1026px;
 	padding-top: 50px;
 	box-sizing: $boxSizing;
 	background: $darkBlue;
